fix: change icon size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -204,8 +204,8 @@ body .wrapper > main > .main-page_info > header {
 }
 
 body .wrapper > main > .main-page_info > header > .logo-icon {
-  max-width: 200px;
-  max-height: 55px;
+  width: 200px;
+  height: 55px;
 }
 
 body .wrapper > main > .main-page_info > header > .main-page_contacts {
@@ -218,6 +218,8 @@ body .wrapper > main > .main-page_info > header > .main-page_contacts {
 }
 
 body .wrapper > main > .main-page_info > header > .main-page_contacts > .contact-icon {
+  width: 26px;
+  height: 26px;
   margin-right: 9px;
   max-width: 24px;
   max-height: 24px;
@@ -498,18 +500,18 @@ body .wrapper > .form-wrapper > .form {
   border: 4px solid #63D2C1;
 }
 
-body .wrapper > .form-wrapper > .form > .success-from-wrapper {
+body .wrapper > .form-wrapper > .form > .success-form-wrapper {
   padding: 50px 0;
   text-align: center;
   display: none;
 }
 
-body .wrapper > .form-wrapper > .form > .success-from-wrapper > svg {
+body .wrapper > .form-wrapper > .form > .success-form-wrapper > svg {
   max-width: 195px;
   max-height: 128px;
 }
 
-body .wrapper > .form-wrapper > .form > .success-from-wrapper p {
+body .wrapper > .form-wrapper > .form > .success-form-wrapper p {
   line-height: 150%;
   margin-top: 41px;
   letter-spacing: 0.65px;
@@ -633,6 +635,9 @@ body .wrapper > .form-wrapper > .form > form > .input-wrapper input:focus {
 }
 
 body .wrapper > .form-wrapper > .form > form > input[type='submit'] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
   color: #fff;
   cursor: pointer;
   padding: 17px 75px;
@@ -677,8 +682,8 @@ body > footer > .footer-head .social-links a {
 }
 
 body > footer > .footer-head .social-links a svg {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 body > footer > .footer-head .social-links a:hover {
